feat: Adding more api calls and refactoring
